src/objects/Apttus_Revenue2__Milestone__c.object
<CustomObject>
    <description>Represents milestones associated with other business objects.</description>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Date__c</fullName>
        <description>Milestone completed date</description>
        <inlineHelpText>Milestone completed date</inlineHelpText>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement</description>
        <inlineHelpText>Associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comments__c</fullName>
        <description>Milestone comments</description>
        <inlineHelpText>Milestone comments</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Expected_Date__c</fullName>
        <description>Milestone expected date</description>
        <inlineHelpText>Milestone expected date</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Milestone active indicator</description>
        <inlineHelpText>Milestone active indicator</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Status__c</fullName>
        <description>Milestone status</description>
        <inlineHelpText>Milestone status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expected</fullName>
                    <default>true</default>
                    <label>Expected</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>